Git plugin: Allow to silence the logs. Auto-Hide treeview scrollbars. Fix file diff when file is staged.

--- a/bin/assets/ui/breeze.css
+++ b/bin/assets/ui/breeze.css
@@ -306,6 +306,7 @@ ListView::row:selected {
 DropDownList::ListBox::item,
 ComboBox::DropDownList::ListBox::item {
 	padding-left: 4dp;
+	background-color: transparent;
 }
 
 DropDownList::ListBox::item:hover,
